ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

//回调处理函数,解析app下发的json后组合二进制上报给app
//@paran data二进制数据 length数据长度 type 0:BLE数据 1:SPP数据
typedef void (*protocol_data_send_handle)(const uint8_t *data,uint16_t length,uint8_t type);
//回调处理函数,响应原始数据给app //老的重启日志需要原始数据
typedef void (*protocol_data_response_handle)(const uint8_t *data,uint16_t length);
// ------------------------------ 基础事件发送/接收 ------------------------------
/**
 * @brief:调用事件号发送内容给固件
 * @param array Json字符串, 编码可以选择utf8
 * @param len Json数据长度
 * @param evt_type 事件号
 * @param evt_base 事件方向,当jsonData是{}有效
 * {
 *  VBUS_EVT_BASE_SET = 0x2000,        //内部使用
 *	VBUS_EVT_BASE_GET = 0x2100,
 *	VBUS_EVT_BASE_BLE_REPLY = 0x2200,  //内部使用
 *	VBUS_EVT_BASE_NOTICE_APP = 0x2300, //通知
 *	VBUS_EVT_BASE_APP_SET = 0x2400,	   //设置
 *	VBUS_EVT_BASE_APP_GET = 0x2500,	   //获取
 *	VBUS_EVT_BASE_REQUEST = 0x2600	   //C库请求
 * }
 * @return:SUCCESS,成功
 */
extern int WriteJsonData(const char *array, int len, int evt_type, int evt_base);
/**
 * @brief:直接下发原始数据给固件
 * @param data 协议原始数据
 * @param length Json数据长度
 */
extern int WriteRawData(const uint8_t *data,uint16_t length);
/**
 * @brief:app接收到数据,通过这个函数转发到c库（用于转发收到后的命令）
 * @param rec_data 蓝牙接收到的二进制数据
 * @param len 数据长度
 * @param type 数据类型 0:ble 1:SPP
 * @return int SUCCESS(0) 成功
*/
extern int ReceiveDatafromBle(const char *rec_data,int len,uint8_t type);
/**
 * @brief: 蓝牙数据发送完成
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int tranDataSendComplete(void);
/**
 * @brief:队列清除
 * @return:SUCCESS(0)成功
 * */
extern int ProtocolQueueClean(void);
/**
 * @brief:获取Clib版本信息
 * @param release_string clib版本号 三位表示release版本 四位表是develop版本
 * @return:SUCCESS(0)成功 ERROR_NULL(14)失败
 * */
extern int getClibVersion(char *release_string);
// ------------------------------ 初始化/设置获取基础事件 ------------------------------

/**
 * @brief 响应原始数据回调
 * @param func 蓝牙响应原始数据函数
 */
extern void responseRawData(protocol_data_response_handle func);
/**
 * @brief 初始化c库
 * @param func 蓝牙发送函数
 * @return int SUCCESS(0) 成功
 */
extern int callBackEnable(protocol_data_send_handle func);
/**
 * @brief 启用log
 * @param isPrintConsole 是否打印控制台 {0:不打开 1:打开}
 * @param isWriteFile 是否写文件 {0:不写文件 1:写文件}
 * @param filePath 文件路径,注意最路径后面要有一个斜杠
 * @return SUCCESS(0) 成功
 */
extern int EnableLog(bool isPrintConsole,bool isWriteFile,char* filePath);
/**
 * @brief 设置log保存天数
 * @param saveDay 保存日志天数 最少两天
 * @return SUCCESS(0) 成功
 */
extern int SetSaveLogDay(int saveDay);
/**
 * @brief:设置当前绑定状态
 * @param mode 模式
 * {
 *    PROTOCOL_MODE_UNBIND = 0, //没有绑定
 *    PROTOCOL_MODE_BIND   = 1, //已经绑定
 *    PROTOCOL_MODE_OTA    = 2  //升级模式
 * }
 * @return SUCCESS(0) 成功
 */
extern int SetMode(int mode);
/**
 * @brief:获取当前绑定状态
 * @return:
 * {
 *    PROTOCOL_MODE_UNBIND = 0, //没有绑定
 *    PROTOCOL_MODE_BIND   = 1, //已经绑定
 *    PROTOCOL_MODE_OTA    = 2  //升级模式
 * }
 */
extern int GetMode(void);
/**
 * @brief 设置持久化路径, 用于保存数据(分段同步), 初始化时调用即可，无顺序要求，最后不要加斜杠 /
 * @param filePath 持久化目录路径
 * @return SUCCESS(0) 成功
 */
extern int setFilePath(char *filePath);
/**
 * @brief 设置持久化路径, 用于保存功能表数据, 初始化时调用即可，无顺序要求，最后不要加斜杠 /
 * @param filePath 持久化目录路径
 * @return SUCCESS(0) 成功
 */
extern int setFunctionTableFilePath(char *filePath);
/**
 * @brief:设置运行环境 release / debug
 * @param mode 0:debug 1:relese
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int setRunMode(int mode);
/**
 * @brief:设置流数据是否输出开关
 * @param iswrite 控制写入流数据开关公开 0不写入 1写入 默认不写入流数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int setWriteStreamByte(bool iswrite);
 /**
  * @brief:启用或者关闭固件补丁(暂时不启用)
  * @param index 索引号
  * @param enable 使能
  * {enable    = 1, //使能
  *  disenable = 2  //不使能}
  * @return:
  *   SUCCESS(0) : 成功
  */
extern int SetPatch(int index,bool enable);
/**
 * @brief 获取同步配置状态
 * @return bool   0:空闲 1:忙碌, 正在同步
 */
extern bool GetSyncConfigStatus(void);
// ------------------------------ v2同步健康、同步GPS和多运动 ------------------------------
/**
 * @brief:开始v2同步健康数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int StartSyncV2HealthData(void);
/**
 * @brief:停止v2同步健康数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int StopSyncV2HealthData(void);
/**
 * @brief:设置v2同步健康数据偏移
 * @param type 数据类型
 * {
 *    type = 0,运动数据
 *    type = 1,睡眠数据,不支持
 *    type = 2,心率数据
 * }
 * @param value 偏移数值
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int SetSyncV2HealthOffset(int type,int value);
/**
 * @brief:开始同步v2运动数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int startSyncV2ActivityData(void);
/**
 * @brief:停止同步v2运动数据
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int stopSyncV2ActivityData(void);