ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `protocol_c/protocol_c/c2flutter/ido_protocol_public_interface.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class ProtocolFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ProtocolFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ProtocolFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// ------------------------------ 基础事件发送/接收 ------------------------------
  /// /**
  ///  * @brief:调用事件号发送内容给固件
  ///  * @param array Json字符串, 编码可以选择utf8
  ///  * @param len Json数据长度
  ///  * @param evt_type 事件号
  ///  * @param evt_base 事件方向,当jsonData是{}有效
  ///  * {
  ///  *  VBUS_EVT_BASE_SET = 0x2000,        //内部使用
  ///  *	VBUS_EVT_BASE_GET = 0x2100,
  ///  *	VBUS_EVT_BASE_BLE_REPLY = 0x2200,  //内部使用
  ///  *	VBUS_EVT_BASE_NOTICE_APP = 0x2300, //通知
  ///  *	VBUS_EVT_BASE_APP_SET = 0x2400,	   //设置
  ///  *	VBUS_EVT_BASE_APP_GET = 0x2500,	   //获取
  ///  *	VBUS_EVT_BASE_REQUEST = 0x2600	   //C库请求
  ///  * }
  ///  * @return:SUCCESS,成功
  ///  */
  int WriteJsonData(
    ffi.Pointer<ffi.Char> array,
    int len,
    int evt_type,
    int evt_base,
  ) {
    return _WriteJsonData(
      array,
      len,
      evt_type,
      evt_base,
    );
  }

  late final _WriteJsonDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int,
              ffi.Int)>>('WriteJsonData');
  late final _WriteJsonData = _WriteJsonDataPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, int, int)>();

  /// @brief:直接下发原始数据给固件
  /// @param data 协议原始数据
  /// @param length Json数据长度
  int WriteRawData(
    ffi.Pointer<ffi.Int> data,
    int length,
  ) {
    return _WriteRawData(
      data,
      length,
    );
  }

  late final _WriteRawDataPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Int>, ffi.Int)>>(
      'WriteRawData');
  late final _WriteRawData =
      _WriteRawDataPtr.asFunction<int Function(ffi.Pointer<ffi.Int>, int)>();

  /// @brief:app接收到数据,通过这个函数转发到c库（用于转发收到后的命令）
  /// @param rec_data 蓝牙接收到的二进制数据
  /// @param len 数据长度
  /// @param type 数据类型 0:ble 1:SPP
  /// @return int SUCCESS(0) 成功
  int ReceiveDatafromBle(
    ffi.Pointer<ffi.Char> rec_data,
    int len,
    int type,
  ) {
    return _ReceiveDatafromBle(
      rec_data,
      len,
      type,
    );
  }

  late final _ReceiveDatafromBlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)>>('ReceiveDatafromBle');
  late final _ReceiveDatafromBle = _ReceiveDatafromBlePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief: 蓝牙数据发送完成
  /// @return:
  /// SUCCESS(0) : 成功
  int tranDataSendComplete() {
    return _tranDataSendComplete();
  }

  late final _tranDataSendCompletePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tranDataSendComplete');
  late final _tranDataSendComplete =
      _tranDataSendCompletePtr.asFunction<int Function()>();

  /// @brief:队列清除
  /// @return:SUCCESS(0)成功
  int ProtocolQueueClean() {
    return _ProtocolQueueClean();
  }

  late final _ProtocolQueueCleanPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ProtocolQueueClean');
  late final _ProtocolQueueClean =
      _ProtocolQueueCleanPtr.asFunction<int Function()>();

  /// @brief:获取Clib版本信息
  /// @param release_string clib版本号 三位表示release版本 四位表是develop版本
  /// @return:SUCCESS(0)成功 ERROR_NULL(14)失败
  int getClibVersion(
    ffi.Pointer<ffi.Char> release_string,
  ) {
    return _getClibVersion(
      release_string,
    );
  }

  late final _getClibVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'getClibVersion');
  late final _getClibVersion =
      _getClibVersionPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief 响应原始数据回调
  /// @param func 蓝牙响应原始数据函数
  void responseRawData(
    protocol_data_response_handle func,
  ) {
    return _responseRawData(
      func,
    );
  }

  late final _responseRawDataPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(protocol_data_response_handle)>>(
      'responseRawData');
  late final _responseRawData = _responseRawDataPtr
      .asFunction<void Function(protocol_data_response_handle)>();

  /// @brief 初始化c库
  /// @param func 蓝牙发送函数
  /// @return int SUCCESS(0) 成功
  int callBackEnable(
    protocol_data_send_handle func,
  ) {
    return _callBackEnable(
      func,
    );
  }

  late final _callBackEnablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(protocol_data_send_handle)>>(
          'callBackEnable');
  late final _callBackEnable =
      _callBackEnablePtr.asFunction<int Function(protocol_data_send_handle)>();

  /// @brief 启用log
  /// @param isPrintConsole 是否打印控制台 {0:不打开 1:打开}
  /// @param isWriteFile 是否写文件 {0:不写文件 1:写文件}
  /// @param filePath 文件路径,注意最路径后面要有一个斜杠
  /// @return SUCCESS(0) 成功
  int EnableLog(
    int isPrintConsole,
    int isWriteFile,
    ffi.Pointer<ffi.Char> filePath,
  ) {
    return _EnableLog(
      isPrintConsole,
      isWriteFile,
      filePath,
    );
  }

  late final _EnableLogPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('EnableLog');
  late final _EnableLog =
      _EnableLogPtr.asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  /// @brief 设置log保存天数
  /// @param saveDay 保存日志天数 最少两天
  /// @return SUCCESS(0) 成功
  int SetSaveLogDay(
    int saveDay,
  ) {
    return _SetSaveLogDay(
      saveDay,
    );
  }

  late final _SetSaveLogDayPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('SetSaveLogDay');
  late final _SetSaveLogDay = _SetSaveLogDayPtr.asFunction<int Function(int)>();

  /// @brief:设置当前绑定状态
  /// @param mode 模式
  /// {
  /// PROTOCOL_MODE_UNBIND = 0, //没有绑定
  /// PROTOCOL_MODE_BIND   = 1, //已经绑定
  /// PROTOCOL_MODE_OTA    = 2  //升级模式
  /// }
  /// @return SUCCESS(0) 成功
  int SetMode(
    int mode,
  ) {
    return _SetMode(
      mode,
    );
  }

  late final _SetModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('SetMode');
  late final _SetMode = _SetModePtr.asFunction<int Function(int)>();

  /// @brief:获取当前绑定状态
  /// @return:
  /// {
  /// PROTOCOL_MODE_UNBIND = 0, //没有绑定
  /// PROTOCOL_MODE_BIND   = 1, //已经绑定
  /// PROTOCOL_MODE_OTA    = 2  //升级模式
  /// }
  int GetMode() {
    return _GetMode();
  }

  late final _GetModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('GetMode');
  late final _GetMode = _GetModePtr.asFunction<int Function()>();

  /// @brief 设置持久化路径, 用于保存数据(分段同步), 初始化时调用即可，无顺序要求，最后不要加斜杠 /
  /// @param filePath 持久化目录路径
  /// @return SUCCESS(0) 成功
  int setFilePath(
    ffi.Pointer<ffi.Char> filePath,
  ) {
    return _setFilePath(
      filePath,
    );
  }

  late final _setFilePathPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'setFilePath');
  late final _setFilePath =
      _setFilePathPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief 设置持久化路径, 用于保存功能表数据, 初始化时调用即可，无顺序要求，最后不要加斜杠 /
  /// @param filePath 持久化目录路径
  /// @return SUCCESS(0) 成功
  int setFunctionTableFilePath(
    ffi.Pointer<ffi.Char> filePath,
  ) {
    return _setFunctionTableFilePath(
      filePath,
    );
  }

  late final _setFunctionTableFilePathPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'setFunctionTableFilePath');
  late final _setFunctionTableFilePath = _setFunctionTableFilePathPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief:设置运行环境 release / debug
  /// @param mode 0:debug 1:relese
  /// @return:
  /// SUCCESS(0) : 成功
  int setRunMode(
    int mode,
  ) {
    return _setRunMode(
      mode,
    );
  }

  late final _setRunModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('setRunMode');
  late final _setRunMode = _setRunModePtr.asFunction<int Function(int)>();

  /// @brief:设置流数据是否输出开关
  /// @param iswrite 控制写入流数据开关公开 0不写入 1写入 默认不写入流数据
  /// @return:
  /// SUCCESS(0) : 成功
  int setWriteStreamByte(
    int iswrite,
  ) {
    return _setWriteStreamByte(
      iswrite,
    );
  }

  late final _setWriteStreamBytePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'setWriteStreamByte');
  late final _setWriteStreamByte =
      _setWriteStreamBytePtr.asFunction<int Function(int)>();

  /// @brief:启用或者关闭固件补丁(暂时不启用)
  /// @param index 索引号
  /// @param enable 使能
  /// {enable    = 1, //使能
  /// disenable = 2  //不使能}
  /// @return:
  /// SUCCESS(0) : 成功
  int SetPatch(
    int index,
    int enable,
  ) {
    return _SetPatch(
      index,
      enable,
    );
  }

  late final _SetPatchPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'SetPatch');
  late final _SetPatch = _SetPatchPtr.asFunction<int Function(int, int)>();

  /// @brief 获取同步配置状态
  /// @return bool   0:空闲 1:忙碌, 正在同步
  int GetSyncConfigStatus() {
    return _GetSyncConfigStatus();
  }

  late final _GetSyncConfigStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('GetSyncConfigStatus');
  late final _GetSyncConfigStatus =
      _GetSyncConfigStatusPtr.asFunction<int Function()>();

  /// ------------------------------ v2同步健康、同步GPS和多运动 ------------------------------
  /// /**
  ///  * @brief:开始v2同步健康数据
  ///  * @return:
  ///  *   SUCCESS(0) : 成功
  ///  */
  int StartSyncV2HealthData() {
    return _StartSyncV2HealthData();
  }

  late final _StartSyncV2HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('StartSyncV2HealthData');
  late final _StartSyncV2HealthData =
      _StartSyncV2HealthDataPtr.asFunction<int Function()>();

  /// @brief:停止v2同步健康数据
  /// @return:
  /// SUCCESS(0) : 成功
  int StopSyncV2HealthData() {
    return _StopSyncV2HealthData();
  }

  late final _StopSyncV2HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('StopSyncV2HealthData');
  late final _StopSyncV2HealthData =
      _StopSyncV2HealthDataPtr.asFunction<int Function()>();

  /// @brief:设置v2同步健康数据偏移
  /// @param type 数据类型
  /// {
  /// type = 0,运动数据
  /// type = 1,睡眠数据,不支持
  /// type = 2,心率数据
  /// }
  /// @param value 偏移数值
  /// @return:
  /// SUCCESS(0) : 成功
  int SetSyncV2HealthOffset(
    int type,
    int value,
  ) {
    return _SetSyncV2HealthOffset(
      type,
      value,
    );
  }

  late final _SetSyncV2HealthOffsetPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'SetSyncV2HealthOffset');
  late final _SetSyncV2HealthOffset =
      _SetSyncV2HealthOffsetPtr.asFunction<int Function(int, int)>();

  /// @brief:开始同步v2运动数据
  /// @return:
  /// SUCCESS(0) : 成功
  int startSyncV2ActivityData() {
    return _startSyncV2ActivityData();
  }

  late final _startSyncV2ActivityDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'startSyncV2ActivityData');
  late final _startSyncV2ActivityData =
      _startSyncV2ActivityDataPtr.asFunction<int Function()>();

  /// @brief:停止同步v2运动数据
  /// @return:
  /// SUCCESS(0) : 成功
  int stopSyncV2ActivityData() {
    return _stopSyncV2ActivityData();
  }

  late final _stopSyncV2ActivityDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('stopSyncV2ActivityData');
  late final _stopSyncV2ActivityData =
      _stopSyncV2ActivityDataPtr.asFunction<int Function()>();
